--- a/laba1.html
+++ b/laba1.html
@@ -14,6 +14,7 @@
 </style>
 <body>
 
+<a href="index.html">Повернутись на головну сторінку</a>
 <h1>Опис предметної галузі</h1>
 <h2>Онлайн бібліотека</h2>
 
@@ -55,6 +56,7 @@
     <li><a>Редагування інформації про книги</a></li>
     <li><a>Редагування рецензій</a></li>
 </ol>
-<a href="index.html">Повернутись на головну сторінку</a>
+<h3><strong>UML-діаграма</strong></h3>
+<img src="uml.png">
 </body>
 </html>
