--- a/laba2.html
+++ b/laba2.html
@@ -89,5 +89,7 @@
 <p>Ознайомитись із творчістю автора можна за посиланням: </p>
     <a style="background: #E9E4E0" href="http://loveread.me/books.php?id_author=889">Збірник творів Артура Конан-Дойла</a>
 </p>
+<a href="code_2.html" class="button-4"><span>Переглянути код сторінки</span></a>
+<a href="index.html" class="button-4"><span>На головну сторінку</span></a>
 </body>
 </html>
