локальний коміт (додати файли)

--- a/laba2.html
+++ b/laba2.html
@@ -42,7 +42,7 @@
         size: A5;
         background: burlywood;
     }
-    ul#ul{
+    ul#ul-laba2{
         width: 300px;
         margin: auto;
         list-style-image: url("list_icon.png");
@@ -67,7 +67,7 @@
 <p lang="en">“The library is inhabited by spirits that come out of the pages at night.”
     – <strong>Isabel Allende</strong></p>
 
-<ul id="ul">
+<ul id="ul-laba2">
     <h4><strong>Список жанрів, які ви можете знайти у нашій бібліотеці</strong></h4>
     <li>Класика</li>
     <li>Фантастика</li>
@@ -87,7 +87,7 @@
     (частиною подвійного). Також зустрічаються варіанти написання Конан-Дойль, а також Конан Дойль, Конан-Дойл.
     <br><br>
 <p>Ознайомитись із творчістю автора можна за посиланням: </p>
-    <a style="background: #E9E4E0" href="http://loveread.me/books.php?id_author=889">Збірник творів Артура Конан-Дойла</a>
+    <a style="background: #E9E4E0; color: black" href="http://loveread.me/books.php?id_author=889">Збірник творів Артура Конан-Дойла</a>
 </p>
 <a href="code_2.html" class="button-4"><span>Переглянути код сторінки</span></a>
 <a href="index.html" class="button-4"><span>На головну сторінку</span></a>
