--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </header>
 
 <nav class="nav-style">
-    <ul>
-        <li class="li-style"><a class="li-a-style" href="index.html">Головна сторінка</a></li>
-        <li class="li-style"><a class="li-a-style" href="laba1.html">Лабораторна робота 1</a></li>
-        <li class="li-style"><a class="li-a-style" href="laba2.html">Лабораторна робота 2</a></li>
+    <ul class="ul-index">
+        <li class="li-style, li-index"><a class="li-a-style" href="index.html">Головна сторінка</a></li>
+        <li class="li-style, li-index"><a class="li-a-style" href="laba1.html">Лабораторна робота 1</a></li>
+        <li class="li-style, li-index"><a class="li-a-style" href="laba2.html">Лабораторна робота 2</a></li>
     </ul>
 </nav>
 
@@ -40,9 +40,9 @@
     <fieldset style="background: black">
         <legend style="color: azure; font-family: Arial"><strong>Вхід у систему</strong></legend>
         <p style="color: azure"><strong>пошта</strong></p>
-        <input type="email">
+        <input type="email" placeholder="логін">
         <p style="color: azure"><strong>пароль</strong></p>
-        <input type="password">
+        <input type="password" placeholder="пароль">
         <button type="submit">Вхід</button>
     </fieldset>
 </form>
