--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Caveat&display=swap" rel="stylesheet">
 </head>
+<style>
+    ul#ul{
+        list-style-image: url("images/list_icon.png");
+    }
+    ul#ul1{
+        list-style-image: url("images/bestseller.png");
+    }
+</style>
 <body>
 <div class="container">
     <header>
@@ -31,10 +39,26 @@
 
     <div class="main">
         <div class="best-lib">
-            Найкраще в бібліотеці
+            <ul id="ul">
+                <h4><strong>Список жанрів, які ви можете знайти у нашій бібліотеці</strong></h4>
+                <li>Класика</li>
+                <li>Фантастика</li>
+                <li>Містика</li>
+                <li>Пригоди</li>
+                <li>Наукова література</li>
+                <li>Детективи</li>
+                <li>Психологія</li>
+                <li>Романи</li>
+            </ul>
         </div>
         <div class="best-today">
-            Найкраще сьогодні
+            <ul id="ul1">
+                <h4>Бестселери нашої бібліотеки</h4>
+                <li><a><h5>Бог завжди подорожує інкогніто </h5><br><h6>Лоран Гунель</h6> </a></li>
+                <li><a><h5>Місто дівчат </h5><br><h6>Елізабет Гілберт</h6> </a></li>
+                <li><a><h5>Нормальні люди</h5><br><h6>Саллі Руні</h6> </a></li>
+                <li><a><h5>П'ять четвертинок мандарина</h5><br><h6>Джоан Гарріс</h6> </a></li>
+            </ul>
         </div>
     </div>
     <div class="bottom">
