--- a/zvit/3Zvit.html
+++ b/zvit/3Zvit.html
@@ -80,7 +80,7 @@
             <img src="../images_zvit/3-1.png">
         </div>
 
-        <h1><a name="1">Головна сторінка<br><img src="" style="height: 600px"></a></h1>
+        <h1><a name="1">Головна сторінка<br><img src="../images_zvit/3.jpg" style="height: 600px"></a></h1>
         <h1><a name="2">Таблична розмітка<br><img src="../images_zvit/3-2.png" style="height: 600px"></a></h1>
         <h1><a name="3">Розмітка блоками<br><img src="../images_zvit/3-3.png" style="height: 600px"></a></h1>
         <h1><a name="4">Макет нашого сайту<br><img src="../images_zvit/3-maket.png" style="height: 600px"></a></h1>
