--- a/laba4_6.html
+++ b/laba4_6.html
@@ -6,15 +6,16 @@
 </head>
 <body>
 <div align="center">
+    <h2>Таблиця №1, варіант 6</h2>
     <p>Введіть розмір масиву</p>
-    <input type="text" name="size" id="size" value="10">
-    <button onclick="main()">Начать</button>
+    <input type="text" name="size" id="size6" value="10">
+    <button onclick="scripts/main()">Начать</button>
     <p id="mainArray"></p>
     <p id="max"></p>
     <p id="min"></p>
     <p id="sum"></p>
     <p id="sorted"></p>
-    <script src="Arrays.js">
+    <script src="scripts/Arrays.js">
     </script>
 </div>
 </body>
