--- a/zvit/4Zvit.html
+++ b/zvit/4Zvit.html
@@ -48,13 +48,17 @@
             <a href="#0">Постановка задачі<br>Лабораторної роботи №4</a>
         </div>
         <div class="left_nav_div">
-            <a href="#1">4 способи функціонального застосування JavaScript</a>
+            <a href="#1">4 способи функціонального <br>
+                застосування JavaScript</a>
         </div>
         <div class="left_nav_div">
             <a href="#2">Масиви</a>
         </div>
         <div class="left_nav_div">
-            <a href="#3">6 пункт</a>
+            <a href="#3">Календар</a>
+        </div>
+        <div class="left_nav_div">
+            <a href="#4">Висновок</a>
         </div>
     </div>
 
@@ -70,8 +74,8 @@
             </p>
             <p>3. Використовуючі сценарій на JavaScript, виконати завдання. яке приведене у Таблиці №1. Кожному студенту
                 виконати своє завдання</p>
-            <img src="../images_zvit/4.jpg">
-            <img src="../images_zvit/4-1.jpg">
+            <img src="../images_zvit/4.jpg" height="150"><br>
+            <img src="../images_zvit/4-1.jpg" height="250">
             <p>4. Забезпечити виконання завдання згідно із варіантом (Таблиця №2), сформувати необхідні дані, вбудовані
                 у програму, у вигляді масивів, виконати тестування програми.</p>
             <img src="../images_zvit/4-2.jpg">
@@ -80,16 +84,32 @@
 
         </div>
 
-        <h1><a name="1">гіпертекстове посилання (схема URL)<br> <img src="../images_zvit/4-5.jpg">
-            обробник події (handler)<br><img src="../images_zvit/4-7.jpg">
-            підстановка (entity)<br><img src="">
-            вставка (тег SCRIPT).<br><img src="../images_zvit/4-8.jpg"></a></h1>
+        <h1><a name="1">Гіпертекстове посилання (схема URL)<br>
+            <img src="../images_zvit/4-8.png"><br>
+            Обробник події (handler)<br><img src="../images_zvit/4-7.jpg">
+            Підстановка (entity)<br><img src="">
+            Вставка (тег SCRIPT).<br><img src="../images_zvit/4-8.png"></a></h1>
         <h1><a name="2">Масиви<br></a></h1>
+        <h2 align="center">6 варіант</h2>
         <img src="../images_zvit/4-3.jpg">
         <img src="../images_zvit/4-4.jpg">
         <img src="../images_zvit/4-6.jpg">
-        <h1><a name="3">6 пункт<br><img src="../images_zvit/3-3.png" style="height: 600px"></a></h1>
+        <h2 align="center">2 варіант</h2>
+        <img src="../images_zvit/4-9.png"><br>
+        <img src="../images_zvit/4-10.png"><br>
+        <img src="../images_zvit/4-11.png"><br>
+        <img src="../images_zvit/4-12.png"><br>
 
+        <h1><a name="3">Календар<br></a></h1>
+        <img src="../images_zvit/4-13.png"><br>
+        <img src="../images_zvit/4-14.png"><br>
+        <img src="../images_zvit/4-15.png"><br>
+        <img src="../images_zvit/4-16.png"><br>
+        <img src="../images_zvit/4-17.png"><br>
+
+        <h1><a name="4">Висновок<br></a></h1>
+        <p>На даній лабораторній ми освоїли базовий синтаксик такої мови програмування як JavaScript, реалізувавши
+        роботу календаря та створивши застосунок, який вірішує певні задачі для різних масивів з числами.</p>
     </div>
 </div>
 </body>
