--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         list-style-image: url("images/bestseller.png");
     }
 </style>
-<script>
-    function main(){
-        return  window.location.href;
-    }</script>
-    <form>
-    <input value = "& {main()};">
-    </form>
 <body>
+
+<script>
+    var date = new Date();
+    alert(date);
+</script>
+
 <div class="container">
     <header>
         <div class="header">
@@ -33,7 +32,7 @@
             <nav>
                 <ul>
                     <li><a href="">Головна</a></li>
-                    <li><a href="JavaScript:window.alert('Нажаль, цей розділ не працює')">Про нас</a>
+                    <li><a href="JavaScript:window.alert('На жаль, цей розділ не працює')">Про нас</a>
                     <li><a href="">Автори</a></li>
                     <li><a href="">Література</a></li>
                 </ul>
