--- a/zvit/1Zvit.html
+++ b/zvit/1Zvit.html
@@ -45,7 +45,7 @@
 <div class="center">
     <div class="left_nav">
         <div class="left_nav_div">
-            <a href="#0">Постановка задачі<br>Лабораторної роботи №1</a>
+            <a href="#0">Постановка задачі<br>Лабораторної роботи №1</a href="#0">
         </div>
         <div class="left_nav_div">
             <a href="#1">Опис предметної галузі</a>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="content">
-        <h1><a name="0"> Поставновка задачі</a></h1>
+        <h1><a> Поставновка задачі</a></h1>
         <div><p>1.	На свій розсуд вибрати любу предметну галузь і виконати опис цієї галузі, а саме:
             опис бізнес-логіки системи (функціонал майбутньої програми)  , сценарій, об’екти взаимодії.</p>
 
