почему ты мне не сказала что у меня на русском..............

--- a/laba4.html
+++ b/laba4.html
@@ -49,7 +49,7 @@
         <h2>Таблиця №1, варіант 6</h2>
         <p>Введіть розмір масиву</p>
         <input type="text" name="size" id="size6" value="10">
-        <button onclick="scripts/main6()">Начать</button>
+        <button onclick="scripts/main6()">Почати</button>
         <p id="mainArray6"></p>
         <p id="max"></p>
         <p id="min"></p>
