--- a/zvit/3Zvit.html
+++ b/zvit/3Zvit.html
@@ -21,10 +21,10 @@
         <a href="3Zvit.html">Лабораторна<br>робота №3</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №4</a>
+        <a href="4Zvit.html">Лабораторна<br>робота №4</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №5</a>
+        <a href="5Zvit.html">Лабораторна<br>робота №5</a>
     </div>
     <div class="labs_containers_unselected">
         <a href="">Лабораторна<br>робота №6</a>
