--- a/zvit/4Zvit.html
+++ b/zvit/4Zvit.html
@@ -24,7 +24,7 @@
         <a href="4Zvit.html">Лабораторна<br>робота №4</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №5</a>
+        <a href="5Zvit.html">Лабораторна<br>робота №5</a>
     </div>
     <div class="labs_containers_unselected">
         <a href="">Лабораторна<br>робота №6</a>
