--- a/zvit/5Zvit.html
+++ b/zvit/5Zvit.html
@@ -145,6 +145,8 @@
     <img src="../images_zvit/5-19.png"><br>
 
     <h1><a name="5">Модуль jQuery для мультимедіа<br></a></h1>
+    <img src="../images_zvit/5-20.jpg"><br>
+    <img src="../images_zvit/5-21.jpg"><br>
 
     <h1><a name="6">Висновок<br></a></h1>
     <p>На даній лабораторній ми навичлися використовувати JavaScript-бібліотек jQuery для динамічної розробки сайтів.
