--- a/zvit/1Zvit.html
+++ b/zvit/1Zvit.html
@@ -39,7 +39,7 @@
         <a href="">Лабораторна<br>робота №9</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="../index.html">Перейти на<br>сайт</a>
+        <a href="../index.php">Перейти на<br>сайт</a>
     </div>
 </div>
 <div class="center">
