--- a/5.3.html
+++ b/5.3.html
@@ -146,6 +146,7 @@
              data-description="Image 2 Description">
     </div>
 </div>
-<a style="font-family: Arial; size: 30px;" href="5_gallery.html">Перейти до галереї</a>
+<a style="font-family: Arial; size: 30px;" href="5_gallery.html">Завдання №4</a><br>
+<a style="font-family: Arial; size: 30px;" href="5.7.html">Завдання №7</a>
 </body>
 </html>
