--- a/zvit/3Zvit.html
+++ b/zvit/3Zvit.html
@@ -11,10 +11,10 @@
     <h2>Студенти групи ІА-94 Трохимчук Софія та Грязнова Євгенія</h2>
 </div>
 <div class="labs_containers">
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="1Zvit.html">Лабораторна<br>робота №1</a>
     </div>
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="2Zvit.html">Лабораторна<br>робота №2</a>
     </div>
     <div class="labs_containers_selected">
@@ -27,7 +27,7 @@
         <a href="5Zvit.html">Лабораторна<br>робота №5</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №6</a>
+        <a href="6Zvit.html">Лабораторна<br>робота №6</a>
     </div>
     <div class="labs_containers_unselected">
         <a href="">Лабораторна<br>робота №7</a>
