--- a/zvit/2Zvit.html
+++ b/zvit/2Zvit.html
@@ -14,10 +14,10 @@
     <div class="labs_containers_selected">
         <a href="1Zvit.html">Лабораторна<br>робота №1</a>
     </div>
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="2Zvit.html">Лабораторна<br>робота №2</a>
     </div>
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="3Zvit.html">Лабораторна<br>робота №3</a>
     </div>
     <div class="labs_containers_unselected">
@@ -27,7 +27,7 @@
         <a href="5Zvit.html">Лабораторна<br>робота №5</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №6</a>
+        <a href="6Zvit.html">Лабораторна<br>робота №6</a>
     </div>
     <div class="labs_containers_unselected">
         <a href="">Лабораторна<br>робота №7</a>
