--- a/zvit/5Zvit.html
+++ b/zvit/5Zvit.html
@@ -11,23 +11,23 @@
     <h2>Студенти групи ІА-94 Трохимчук Софія та Грязнова Євгенія</h2>
 </div>
 <div class="labs_containers">
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="1Zvit.html">Лабораторна<br>робота №1</a>
     </div>
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="2Zvit.html">Лабораторна<br>робота №2</a>
     </div>
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="3Zvit.html">Лабораторна<br>робота №3</a>
     </div>
-    <div class="labs_containers_selected">
+    <div class="labs_containers_unselected">
         <a href="4Zvit.html">Лабораторна<br>робота №4</a>
     </div>
     <div class="labs_containers_selected">
         <a href="5Zvit.html">Лабораторна<br>робота №5</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №6</a>
+        <a href="6Zvit.html">Лабораторна<br>робота №6</a>
     </div>
     <div class="labs_containers_unselected">
         <a href="">Лабораторна<br>робота №7</a>
