--- a/zvit/7Zvit.html
+++ b/zvit/7Zvit.html
@@ -61,7 +61,10 @@
             <a href="#4">Структура таблиць</a>
         </div>
         <div class="left_nav_div">
-            <a href="#5">Висновок</a>
+            <a href="#5">Підключення БД</a>
+        </div>
+        <div class="left_nav_div">
+            <a href="#6">Висновок</a>
         </div>
     </div>
 </div>
@@ -102,6 +105,7 @@
     <img src="../images_zvit/7-3.png"><br>
 
     <h1><a name="3">Датологічна модель<br></a></h1>
+    <img src="../images_zvit/7-11.png"><br>
     <img src="../images_zvit/7-4.png"><br>
 
     <h1><a name="4">Структура таблиць<br></a></h1>
@@ -110,7 +114,11 @@
     <img src="../images_zvit/7-7.png"><br>
     <img src="../images_zvit/7-8.png"><br>
 
-    <h1><a name="5">Висновок<br></a></h1>
+    <h1><a name="5">Підключення БД<br></a></h1>
+    <img src="../images_zvit/7-9.png"><br>
+    <img src="../images_zvit/7-10.png"><br>
+
+    <h1><a name="6">Висновок<br></a></h1>
     <p>На даній лабораторній ми навчилися створювати свою базу даних, використовуючи SQL, та працювати з нею,
         використовуючи РНР, а саме додавати таблиці, додавати дані до таблиці, відображати їх вміст та додавати дані до
         БД через WEB-сторінку.
