--- a/zvit/8ZVIT.html
+++ b/zvit/8ZVIT.html
@@ -58,10 +58,10 @@
             <a href="#3">Даталогічна <br> модель</a>
         </div>
         <div class="left_nav_div">
-            <a href="#4">Структура таблиць</a>
+            <a href="#4">SQL запити</a>
         </div>
         <div class="left_nav_div">
-            <a href="#5">Підключення БД</a>
+            <a href="#5">Вибір мов</a>
         </div>
         <div class="left_nav_div">
             <a href="#6">Висновок</a>
@@ -134,15 +134,14 @@
     <img src="../images_zvit/7-11.png"><br>
     <img src="../images_zvit/7-4.png"><br>
 
-    <h1><a name="4">Структура таблиць<br></a></h1>
-    <img src="../images_zvit/7-5.png"><br>
-    <img src="../images_zvit/7-6.png"><br>
-    <img src="../images_zvit/7-7.png"><br>
-    <img src="../images_zvit/7-8.png"><br>
+    <h1><a name="4">SQL запити<br></a></h1>
+    <img src="../images_zvit/8-1.jpg"><br>
+    <img src="../images_zvit/8-5.jpg"><br>
 
-    <h1><a name="5">Підключення БД<br></a></h1>
-    <img src="../images_zvit/7-9.png"><br>
-    <img src="../images_zvit/7-10.png"><br>
+    <h1><a name="5">Вибір мови<br></a></h1>
+    <img src="../images_zvit/8-2.jpg"><br>
+    <img src="../images_zvit/8-3.jpg"><br>
+    <img src="../images_zvit/8-4.jpg"><br>
 
     <h1><a name="6">Висновок<br></a></h1>
     <p>На даній лабораторній ми навчилися створювати свою базу даних, використовуючи SQL, та працювати з нею,
