какой эллерт доделай отчет (((((((((((((((((((

--- a/zvit/8ZVIT.html
+++ b/zvit/8ZVIT.html
@@ -52,16 +52,16 @@
                 бази даних</a>
         </div>
         <div class="left_nav_div">
-            <a href="#2">Пошук</a>
+            <a href="#2">Пошук </a>
         </div>
         <div class="left_nav_div">
-            <a href="#3">Даталогічна <br> модель</a>
+            <a href="#3">Реєстрація та <br> авторизація</a>
         </div>
         <div class="left_nav_div">
             <a href="#4">Структура таблиць</a>
         </div>
         <div class="left_nav_div">
-            <a href="#5">Підключення БД</a>
+            <a href="#5"></a>
         </div>
         <div class="left_nav_div">
             <a href="#6">Висновок</a>
@@ -130,24 +130,20 @@
     <h1><a name="2">Пошук<br></a></h1>
     <img src="../images_zvit/8-6.png"><br>
 
-    <h1><a name="3">Датологічна модель<br></a></h1>
-    <img src="../images_zvit/7-11.png"><br>
-    <img src="../images_zvit/7-4.png"><br>
+    <h1><a name="3">Реєстрація та авторизація<br></a></h1>
+    <img src="../images_zvit/8-7.png"><br>
+    <img src="../images_zvit/8-8.png"><br>
+    <img src="../images_zvit/8-9.png"><br>
 
-    <h1><a name="4">Структура таблиць<br></a></h1>
-    <img src="../images_zvit/7-5.png"><br>
-    <img src="../images_zvit/7-6.png"><br>
-    <img src="../images_zvit/7-7.png"><br>
-    <img src="../images_zvit/7-8.png"><br>
+    <h1><a name="4">Сесія<br></a></h1>
+    <img src="../images_zvit/8-10.png"><br>
+    <img src="../images_zvit/8-11.png"><br>
 
-    <h1><a name="5">Підключення БД<br></a></h1>
-    <img src="../images_zvit/7-9.png"><br>
-    <img src="../images_zvit/7-10.png"><br>
 
     <h1><a name="6">Висновок<br></a></h1>
-    <p>На даній лабораторній ми навчилися створювати свою базу даних, використовуючи SQL, та працювати з нею,
-        використовуючи РНР, а саме додавати таблиці, додавати дані до таблиці, відображати їх вміст та додавати дані до
-        БД через WEB-сторінку.
+    <p>На даній лабораторній ми навчилися додавати користувачів до бази даних через форми, зробивши реєстрацію,
+        авторизацію і для цього використовували сесію. Також реалізували функціонал, пов'язаний із нашою базою даних, та
+        додали вибір мови відображення змісту нашого сайту.
     </p>
 </div>
 </div>
