--- a/zvit/9Zvit.html
+++ b/zvit/9Zvit.html
@@ -36,7 +36,7 @@
         <a href="8Zvit.html">Лабораторна<br>робота №8</a>
     </div>
     <div class="labs_containers_unselected">
-        <a href="">Лабораторна<br>робота №9</a>
+        <a href="9Zvit.html">Лабораторна<br>робота №9</a>
     </div>
     <div class="labs_containers_unselected">
         <a href="../index.php">Перейти на<br>сайт</a>
@@ -48,10 +48,13 @@
             <a href="#0">Постановка задачі<br>Лабораторної роботи №9</a>
         </div>
         <div class="left_nav_div">
-            <a href="#1">Програмний код</a>
+            <a href="#1">Технологія AJAX</a>
         </div>
         <div class="left_nav_div">
-            <a href="#2">Висновок</a>
+            <a href="#2">Порівняння ПЗ</a>
+        </div>
+        <div class="left_nav_div">
+            <a href="#3">Висновок</a>
         </div>
     </div>
 </div>
@@ -69,13 +72,25 @@
             3.	Продемонструвати програмний інтерфейс обробки клієнтських запитів-команд на серверній стороні. <br>
             4.	Результат виконання даного запиту розмістити у звітному HTML-документі та записати у текстовий файл.
             <br>
-        
+            5.  У власний сайт добавити 3 нових запита, з використанням технології AJAX. <br>
+            6.	Результат роботи запитів відобразити у звітному документі  і записати у текстовий файл. <br>
+            7.	Продемонструвати повний функціонал вашого власного сайту.Для цього: <br>
+            	розписати по пунктам, що виконує програма у дев’ятій лабораторній роботі (прямо написати  список дій (запитів), які виконуються у вашій програмі), починаючи з авторизації.
+            <br>
+
+            	Порівняти з пунктами загальної постановки задачі (ПЗ), яку прописували у першій лабораторній роботі та пунктами ПЗ – девятої лабораторної роботи.
+            <br>
+            	Написати що зроблено, що не зроблено, що добавлено у програмі.
+            <br>
+            8.	Оформити  висновки
+            <br>
+
         <h2>Завдання</h2>
         <img src="../images_zvit/9-1.png" alt="">
 
     </div>
 
-    <h1><a name="1">Програмний код</a></h1><br>
+    <h1><a name="1">Технологія AJAX</a></h1><br>
     <h2>Програмний інтерфейс та підключення до БД</h2>
     <img src="../images_zvit/9-4.png"><br>
     <img src="../images_zvit/9-2.png"><br>
@@ -87,8 +102,21 @@
     <h2>XML-файл</h2>
     <img src="../images_zvit/9-8.png"><br>
     <img src="../images_zvit/9-9.png"><br>
+    <img src="../images_zvit/9-10.png"><br>
 
-    <h1><a name="2">Висновок<br></a></h1>
+    <h1><a name="2">Порівняння ПЗ</a></h1><br>
+    <p><strong>Заплановано:</strong></p>
+    1.   Реєстрація, авторизація, вихід із акаунту. <br>
+    2.   Додавання файлів на сайт. <br>
+    3.   Пошук по сайту. <br>
+    4.   Можливість писати коментарі та рецензії. <br>
+
+    <p><strong>Реалізовано:</strong></p>
+    1.   Реєстрація, авторизація, вихід із акаунту. <br>
+    2.   Можливість листування між користувачами. <br>
+    3.   Пошук по сайту. <br>
+
+    <h1><a name="3">Висновок<br></a></h1>
     <p>На даній лабораторній ми навчилися ознайомилися із AJAX-технологією, використали на нашому сайті, надавши двом користувачам обмінюватися
         листами, переглядати отримані листи та видаляти їх. Дані надсилаються із сервера та до сервера, при цьому сторінка
         не перезавантажується.
