--- a/5.7.html
+++ b/5.7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Гифки</title>
+    <title>Гифки!</title>
     <style>.gifsee-circle {
         position: absolute;
         width: 80px;
